--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,8 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: busca_contagem
+  database: buscacontagem
   pool: 5
-  username: root
-  password: "2191128"
-  host: 127.0.0.1
+  username: buscacontagem
+  password: "RD2220casa"
+  host: buscacontagem.com.br
