--- a/public/.htaccess
+++ b/public/.htaccess
@@ -314,11 +314,11 @@ FileETag None
 # Option 1:
 # Rewrite "www.domain.com -> domain.com" 
 
-<IfModule mod_rewrite.c>
-  RewriteCond %{HTTPS} !=on
-  RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-  RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-</IfModule>
+# <IfModule mod_rewrite.c>
+#   RewriteCond %{HTTPS} !=on
+#   RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#   RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+# </IfModule>
 
 # ----------------------------------------------------------------------
 
@@ -327,12 +327,12 @@ FileETag None
 # Be aware that the following rule might not be a good idea if you
 # use "real" subdomains for certain parts of your website.
 
-# <IfModule mod_rewrite.c>
-#   RewriteCond %{HTTPS} !=on
-#   RewriteCond %{HTTP_HOST} !^www\..+$ [NC]
-#   RewriteCond %{HTTP_HOST} (.+)$ [NC]
-#   RewriteRule ^(.*)$ http://www.%1/$1 [R=301,L]
-# </IfModule>
+<IfModule mod_rewrite.c>
+  RewriteCond %{HTTPS} !=on
+  RewriteCond %{HTTP_HOST} !^www\..+$ [NC]
+  RewriteCond %{HTTP_HOST} (.+)$ [NC]
+  RewriteRule ^(.*)$ http://www.%1/$1 [R=301,L]
+</IfModule>
 
 
 
